--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
  "ip": "",
  "port": "",
- "name": "BOT",  
+ "name": "Friday",  
  "auto-night-skip": "false",
- "loginmsg": "ana bot"
+ "loginmsg": "Hello, I'm Friday"
 }
 
